--- a/katex/katex.css
+++ b/katex/katex.css
@@ -167,8 +167,12 @@
 .katex .texttt {
   font-family: KaTeX_Typewriter;
 }
-.katex .mathit {
+.katex .mathdefault {
   font-family: KaTeX_Math;
+  font-style: italic;
+}
+.katex .mathit {
+  font-family: KaTeX_Main;
   font-style: italic;
 }
 .katex .mathrm {
@@ -216,10 +220,6 @@
 .katex .mathitsf,
 .katex .textitsf {
   font-family: KaTeX_SansSerif;
-  font-style: italic;
-}
-.katex .mainit {
-  font-family: KaTeX_Main;
   font-style: italic;
 }
 .katex .mainrm {
@@ -967,10 +967,7 @@
 .katex .boxpad {
   padding: 0 0.3em 0 0.3em;
 }
-.katex .fbox {
-  box-sizing: border-box;
-  border: 0.04em solid black;
-}
+.katex .fbox,
 .katex .fcolorbox {
   box-sizing: border-box;
   border: 0.04em solid;
@@ -998,9 +995,17 @@
 }
 .katex-display > .katex > .katex-html {
   display: block;
+  position: relative;
 }
 .katex-display > .katex > .katex-html > .tag {
   position: absolute;
   right: 0;
+}
+.katex-display.leqno > .katex > .katex-html > .tag {
+  left: 0;
+  right: auto;
+}
+.katex-display.fleqn > .katex {
+  text-align: left;
 }
 
