--- a/style.css
+++ b/style.css
@@ -53,7 +53,11 @@ a {
 }
 
 ul, ol {
-    margin: 0.05em 2.3em;
+    margin: 0.05em 2em;
+}
+
+ul ul, ol ol {
+    margin: 0.05em 0;
 }
 
 ul p, ol p, ul li, ol li {
@@ -62,6 +66,7 @@ ul p, ol p, ul li, ol li {
 
 pre, code {
     font-family: Consolas, "Source Han Sans SC";
+    word-break: break-all;
     margin: 0;
 }
 
@@ -79,6 +84,8 @@ hr {
 table {
     width: 100%;
     border-collapse: collapse;
+    table-layout: fixed;
+    margin: .1em 0;
 }
 
 th, td {
@@ -88,19 +95,9 @@ th, td {
 th {
     font-family: "Lato", "Source Han Sans SC";
     border-bottom: 4px solid black;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
 }
 
-th:first-of-type {
-    border-left: none;
-}
-
-th:last-of-type {
-    border-right: none;
-}
-
-td:first-of-type {
+th:first-of-type, td:first-of-type {
     border-right: 1px solid black;
 }
 
@@ -168,6 +165,11 @@ td:first-of-type {
 
 .katex-display {
     margin: 0;
+}
+
+.katex .cjk_fallback, .katex-display .cjk_fallback {
+    font-family: "Source Han Serif SC";
+    font-size: .9em;
 }
 
 .toc h3, .source-code h4, .document h6 {
